# puzzle

./: .gitignore  CMakeLists.txt  README.md  analyse.cpp  analyse.sh  bld.sh  compile.bat  do.sh  grid.cpp  grid.hpp  main.cpp  p  puzzle.cpp  puzzle.hpp  puzzle.sln  puzzle.vcxproj  wordcache.cpp  wordcache.hpp  wordhint.hpp  wordpath.hpp  words.txt
solutions/: crab  cyborg  dragon  dwarf  elephant  frog  ghost  goblin  goldfish  jellyfish  kraken  martian  minotaur  monkey  monster  pumpking  rat  raven  reaper  robot  sheep  snail  snake  squirrel  troll
wb1.solutions/: alien  ant  bigfoot  cat  crocodile  crud  dinosaur  dolphin  extract  fairy  fox  genie  griffin  lion  lizard  mermaid  minotaur  moose  mummy  octopus  ogre  owl  penguin  pig  raccoon  shark  solutions.txt  spider  turtle  unicorn  vampire  werewolf  whale  witch  yeti  zombie
wb2.solutions/: accessories  accessories2  accessories3  archaeology  archaeology2  at-home  at-home2  beach  beach2  beach3  beach4  beverages  biology  biology2  biology3  birds  birds2  birds3  buildings  buildings2  buildings3  business-&-economics  business-&-economics2  business-&-economics3  camping3  camping4  capital-cities  castles-&-royalty  circus  circus2  cleaning  clothes  clothes2  coffee  collectibles  containers  cooking-verbs  cosmetics  cosmetics2  countries  (+194 more)
